@@ -1,4 +1,8 @@
 release 1.0.1 (2008-11/12)
+- Fixed issue 127
+  https://jersey.dev.java.net/issues/show_bug.cgi?id=147
+  WADL generation using incorrect class loader that fails when in an OSGi
+  environment.
 - Fixed issue for null Pathsegment that occurred for a sub-resource locator as
   follows:
   @Path("{id}")
